--- a/gallery.css
+++ b/gallery.css
@@ -184,7 +184,7 @@ h1{
     scale:0.9;
     grid-gap: 10px;
     grid-template-columns: 1fr 1fr 1fr;
-    justify-content: center;
+    justify-items: center;
 }
 iframe{
     width: 640px;
